# saltysplits

./: .gitignore  README.md  environment.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
.streamlit/: config.toml
saltysplits/: __init__.py  annotations.py  constants.py  enums.py  main.py  models.py  streamlit.py
src/saltysplits/: __init__.py  annotations.py  constants.py  main.py  models.py
tests/: conftest.py  test_main.py  test_models.py
tests/run_files/: Grand Theft Auto Vice City - Any% (No SSU).lss  gcb.lss
