[tool.poetry]
name = "saltysplits"
version = "0.1.0"
description = ""
authors = ["Jasper <j.siebring92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.1.0"
pydantic-xml = "^2.14.1"
semver = "^3.0.4"
pybase64 = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.4"
mypy = "^1.14.1"

[tool.mypy]
plugins = [
  "pydantic_xml.mypy"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
