[tool.poetry]
name = "saltysplits"
version = "0.1.0"
description = "Toolset for LiveSplit files (robust LSS ingestion, run comparison, visualization)"
authors = ["Jasper <j.siebring92@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jaspersiebring/saltysplits"
homepage = "https://saltysplits.com"
keywords = ["livesplit", "speedrunning", "pydantic", "xml", "gaming"]

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.1.0"
pybase64 = "^1.4.0"
pandas = "^2.2.3"
pydantic-xml = { version = "^2.14.1", extras = ["lxml"] }
streamlit = { version = "^1.43.1", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.4"
mypy = "^1.14.1"
requests = "^2.32.3"

[tool.poetry.extras]
streamlit = ["streamlit"]

[tool.mypy]
exclude = [
  "saltysplits/streamlit.py"
]
plugins = [
  "pydantic_xml.mypy"
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "saltysplits/streamlit.py"
]

# Same as Black.
line-length = 88
indent-width = 4

# Currently assumes 3.12 (but can probably be loosened)
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
